@@ -57,6 +57,10 @@
 	* src/Makefile.in (whatis, apropos): Add encodings.o and
 	  $(LIBICONV).
 
+	* src/whatis.c (usage): Document -L/--locale.
+	* man/man1/apropos.man1 (SYNOPSIS, OPTIONS): Likewise.
+	* man/man1/whatis.man1 (SYNOPSIS, OPTIONS): Likewise.
+
 Sun Sep  2 01:21:11 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	Add limited character set aliasing support.
